fixes for alignments

--- a/css/styles.css
+++ b/css/styles.css
@@ -367,8 +367,11 @@ body {
   text-decoration-skip-ink: none;
 }
 
-.experience-description-text, .personal-message-description-text {
+.experience-description-text {
   color: var(--text-color);
+}
+
+.experience-description-text, .personal-message-description-text {
   font-weight: 400;
   font-size: 20px;
   line-height: 36px;
@@ -440,17 +443,23 @@ body {
 .work-image {
   width: 100%;
   max-width: calc(50% - 16px);
+  display: flex;
+  flex-direction: column;
 }
 
 .work-slug {
-  font-size: 16px;
+  font-size: clamp(12px, 16px, 2vw);
   color: var(--text-color-97);
-  margin: 16px auto;
+  margin: 16px 0;
 }
 
 .work-description {
-  font-size: 28px;
+  font-size: clamp(16px, 28px, 4vw);
   color: var(--text-color-97);
+}
+
+.expanded {
+  flex: 1;
 }
 
 .work-img {
@@ -495,6 +504,10 @@ body {
   background-color: var(--bg-color);
   border-radius: 24px;
   padding: 32px;
+}
+
+.personal-message-description-text {
+  color: var(--text-color-97);
 }
 
 @media only screen and (max-width: 992px) {
@@ -543,6 +556,10 @@ body {
 
   .skill-images {
     width: 100%;
+  }
+
+  .work-image {
+    max-width: 100%;
   }
 
   .work-images {
